--- a/style.css
+++ b/style.css
@@ -79,17 +79,13 @@ section a {
     background: #fff;
     color: #000;
     width: 15%;
-    margin: 40px 600px;
     position: absolute;
     font-size: 22px;
     text-align: center;
-  }
-  section a{
-      /* display: block; */
-      margin: auto;
+    margin: auto;
   }
 
-  .botton1:hover {
+  .bt2:hover {
     background: #00b894;
     color: white;
   }
@@ -99,7 +95,7 @@ section h2{
 }
 .id{
     width: 30%;
-    margin: 140px auto;
+    margin: 90px auto;
     font-size: 35px;
     color: chartreuse;
 }
@@ -108,4 +104,16 @@ section p{
     margin: auto;
     font-size: 25px;
     color: aquamarine;
+}
+.bt2{
+    display: block;
+    width: 15%;
+    margin: 30px auto;
+    background: #fff;
+    color: #000;
+    /* width: 15%; */
+    /* position: absolute; */
+    font-size: 22px;
+    text-align: center;
+    /* margin-bottom: 30px; */
 }
